created second page basic profile

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -32,7 +32,7 @@
     </ion-item>
   
   </ion-list>
-  <button ion-button outline icon-right block>
+  <button (click)="goToOtherPage()" ion-button outline icon-right block>
     Fetch!
     <ion-icon ios="ios-paw" md="md-paw"></ion-icon>
   </button>
