--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -8,10 +8,17 @@
 </ion-header>
 
 <ion-content padding>
-    <h3>Basic Profile</h3>
+    <h3>Favorites</h3>
 
-    <p>
-        <img src="" alt="/Users/patrickglavin/Dev/fourth_hex/fetch/resources/dog1.png">
-    </p>
+    <ion-content>
+        <ion-list>
+            <ion-item *ngFor="let pet of pets">
+                <ion-avatar>
+                    <img src={{pet.image}} alt="">
+                </ion-avatar>
+                <h3>{{pet.name}}</h3>
+            </ion-item>
+        </ion-list>
+    </ion-content>
 
 </ion-content>
