adding jasmine specrunner and spec folder

--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -17,7 +17,7 @@
                     <ion-avatar item-start>
                         <img src={{pet.image}}>
                     </ion-avatar>
-                    <h2>{{pet.name}}</h2>
+                    <h2>{{pet.getName}}</h2>
                 </ion-card>
             </ion-item>
         </ion-list>
