--- a/src/test/SpecRunner.html
+++ b/src/test/SpecRunner.html
@@ -33,7 +33,7 @@
     <script src="../app/people/masterController.js"></script>
 
     <!-- include spec files here... -->
-    <script src="spec/masterControllerSpec.js"></script>
+    <script src="spec/httpCallSpec.js"></script>
 </head>
 
 <body>
